Adding styling for new pagination

--- a/myrate/myrate_frontend/src/Screens/SearchPage.css
+++ b/myrate/myrate_frontend/src/Screens/SearchPage.css
@@ -1,12 +1,31 @@
 .SearchTitle {
     text-align: center;
-    text-shadow: 2px 2px 5px cadetblue;
+    text-shadow: 2px 2px 5px rgb(0, 0, 0);
     font-size: xx-large;
 }
 
-.align {
-  alignItems: "center",
-}
+
+/* Table styling */  
+
+  table {
+    align-self: center;
+    border: 2px solid rgb(0, 0, 0);
+   
+  }
+  
+  th {
+  border-bottom: 1px solid black;
+  }
+
+  tfoot {
+    margin: auto;
+  }
+  
+  .pagination {
+    align-self:self-end;
+  }
+
+/* Search Result Card Styling */
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
