--- a/myrate/myrate_frontend/src/Screens/SearchPage.css
+++ b/myrate/myrate_frontend/src/Screens/SearchPage.css
@@ -15,6 +15,9 @@
   
   th {
   border-bottom: 1px solid black;
+  text-align: center;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:x-large;
   }
 
   tfoot {
