add animation to collection list

--- a/myrate/myrate_frontend/src/Components/CollectionList.css
+++ b/myrate/myrate_frontend/src/Components/CollectionList.css
@@ -24,3 +24,26 @@
     .scroll--element + .scroll--element {
         margin-left: 15px;
     }
+
+::-webkit-scrollbar {
+    width: 0px;
+    }
+
+.list--container {
+display: flex;
+overflow-x: scroll;
+width: 100%;
+padding: 20px 0;
+}
+
+
+.card {
+flex-shrink: 0;
+width: 200px;
+height: 300px;
+border-radius: 10px;
+margin-left: 10px;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+}
