--- a/myrate/myrate_frontend/src/Components/CollectionList.css
+++ b/myrate/myrate_frontend/src/Components/CollectionList.css
@@ -38,6 +38,8 @@ padding: 20px 0;
 
 
 .card {
+padding: 130px 0px;
+text-align: center;
 flex-shrink: 0;
 width: 200px;
 height: 300px;
@@ -46,4 +48,20 @@ margin-left: 10px;
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center center;
+box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+transition: all 0.2s;
 }
+
+.card:hover {
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+    transform: scale(1.01);
+  }
+
+.card__title {
+    grid-row: 3/4;
+    font-weight: 400;
+    color: #000;
+  }
+
+
+
