--- a/myrate/myrate_frontend/src/Components/CollectionList.css
+++ b/myrate/myrate_frontend/src/Components/CollectionList.css
@@ -38,7 +38,7 @@ padding: 20px 0;
 
 
 .card {
-padding: 130px 0px;
+padding: 100px 0px;
 text-align: center;
 flex-shrink: 0;
 width: 200px;
@@ -50,6 +50,7 @@ background-repeat: no-repeat;
 background-position: center center;
 box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
 transition: all 0.2s;
+background: #000;
 }
 
 .card:hover {
@@ -60,8 +61,14 @@ transition: all 0.2s;
 .card__title {
     grid-row: 3/4;
     font-weight: 400;
-    color: #000;
+    color: #fff;
   }
+
+.card__description {
+    position: relative;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.9);
+}
 
 
 
