--- a/myrate/myrate_frontend/src/Components/CollectionList.css
+++ b/myrate/myrate_frontend/src/Components/CollectionList.css
@@ -50,11 +50,11 @@ background-repeat: no-repeat;
 background-position: center center;
 box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
 transition: all 0.2s;
-background: #000;
+box-shadow: inset 0 0 0 2000px rgba(0, 38, 135, 0.3);
 }
 
 .card:hover {
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 0 0 2000px rgba(194, 211, 255, 0.3);
     transform: scale(1.01);
   }
 
