--- a/myrate/myrate_frontend/src/Components/CollectionList.css
+++ b/myrate/myrate_frontend/src/Components/CollectionList.css
@@ -37,7 +37,7 @@ padding: 20px 0;
 }
 
 
-.card {
+.collection--card {
 padding: 100px 0px;
 text-align: center;
 flex-shrink: 0;
@@ -53,18 +53,18 @@ transition: all 0.2s;
 box-shadow: inset 0 0 0 2000px rgba(0, 38, 135, 0.3);
 }
 
-.card:hover {
+.collection--card:hover {
     box-shadow: inset 0 0 0 2000px rgba(194, 211, 255, 0.3);
     transform: scale(1.01);
   }
 
-.card__title {
+.collection--card__title {
     grid-row: 3/4;
     font-weight: 400;
     color: #fff;
   }
 
-.card__description {
+.collection--card__description {
     position: relative;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.9);
