--- a/myrate/myrate_frontend/src/Components/CollectionList.css
+++ b/myrate/myrate_frontend/src/Components/CollectionList.css
@@ -70,5 +70,14 @@ box-shadow: inset 0 0 0 2000px rgba(0, 38, 135, 0.3);
     color: rgba(255, 255, 255, 0.9);
 }
 
+.collection--button {
+  border-radius: 30px;
+  background-color: rgba(255, 175, 113, 0.8);
+  color: #fff;
+  padding: 10px 30px;
+  text-align: center;
+  border-color: transparent;
+}
+
 
 
